Error with prettier deleted the css file after error

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <span class="sound">Whistle</span>
     </div>
   </main>
-
+  <footer>
+    <a src="https://github.com/sharloteean/jsthereminkit">Github Link!</a>
+  </footer>
   <audio data-key="65" src="assets/sounds/classic.wav"></audio>
   <audio data-key="83" src="assets/sounds/dive.wav"></audio>
   <audio data-key="68" src="assets/sounds/pulsewave.wav"></audio>
