--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
   </main>
   <footer>
-    <a src="https://github.com/sharloteean/jsthereminkit">Github Link!</a>
+    <a href="https://github.com/sharloteean/jsthereminkit">Github Link!</a>
   </footer>
   <audio data-key="65" src="assets/sounds/classic.wav"></audio>
   <audio data-key="83" src="assets/sounds/dive.wav"></audio>
