--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link href="./assets/style.css" rel="stylesheet">
   <title>Javascript theremin kit</title>
@@ -50,8 +51,10 @@
   <audio data-key="72" src="assets/sounds/sinewave.wav"></audio>
   <audio data-key="74" src="assets/sounds/sinewave.wav"></audio>
 
-  <script src="./assets/app.js">
-  </script>
+
 </body>
+
+<script src="./assets/app.js">
+</script>
 
 </html>
