Fixed key j and added correct audio file

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <audio data-key="70" src="assets/sounds/sawwave.wav"></audio>
   <audio data-key="71" src="assets/sounds/scare.mp3"></audio>
   <audio data-key="72" src="assets/sounds/sinewave.wav"></audio>
-  <audio data-key="74" src="assets/sounds/sinewave.wav"></audio>
+  <audio data-key="74" src="assets/sounds/whistle.wav"></audio>
 
 
 </body>
